# meeting-recap

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
meeting_recap/: __init__.py  audio.py  cli.py  summarizer.py  transcriber.py
